# sosec-digital-twins

./: .env  README.md  pyproject.toml
.github/workflows/: sync-to-gitlab.yml
data/: ger_demographic_data.csv  key_ger_demographic.xlsx  key_us_demographic.xlsx  topics_de.json  topics_us.json  us_demographic_data.csv
data/results/: ger_demographic_results.csv
src/: agent.py  app.py  bad_responses.json  config.py  data_extraction.py  er_news.py  good_responses.json  llm.py  main.py  output_parser.py  personas_creator.py  prompt_optimization.py  prompt_utils.py  styles.css
